[gd_scene load_steps=3 format=3 uid="uid://gfjggii0tf5r"]

[ext_resource type="Script" path="res://components/cards/2D/deck_pile.gd" id="1_gofh3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4vp1i"]

[node name="DeckPile" type="Node2D"]
script = ExtResource("1_gofh3")

[node name="CardsZone" type="Node2D" parent="."]

[node name="DetectionCardArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionCardArea"]
shape = SubResource("RectangleShape2D_4vp1i")
